# argon-driver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  local-example.cmake
argon/: CMakeLists.txt
argon/argon/: CMakeLists.txt
argon/argon/include/argon/: FlashController.hpp
argon/argon/src/: FlashController.cpp  main.cpp
argon/argon_cli/: CMakeLists.txt
argon/argon_cli/include/: GlobalOptions.hpp
argon/argon_cli/include/commands/: Erase.hpp  ListDevices.hpp  RawSPI.hpp  Read.hpp  ReadId.hpp  ReadSfdp.hpp  ReadStatus.hpp  ReadStatusRegisters.hpp  Write.hpp
argon/argon_cli/src/: GlobalOptions.cpp  main.cpp
argon/argon_cli/src/commands/: Erase.cpp  ListDevices.cpp  RawSPI.cpp  Read.cpp  ReadId.cpp  ReadSfdp.cpp  ReadStatus.cpp  ReadStatusRegisters.cpp  Write.cpp
argon/execs/: CMakeLists.txt
argon/execs/include/: FlashController.hpp  FlashDriver.hpp  N25QDriver.h  SPI.hpp
argon/execs/src/: FlashController.cpp  FlashDriver.cpp  N25QDriver.cpp  SPI.cpp  SPIMemory.cpp  main.cpp
argon/libs/: CMakeLists.txt
argon/libs/cli11/: CMakeLists.txt
argon/libs/flash_controller/: CMakeLists.txt
argon/libs/flash_controller/include/flash_controller/: DataFormatter.hpp  FlashController.hpp  FlashDriver.hpp  SPI.hpp  helpers.hpp
argon/libs/flash_controller/src/: DataFormatter.cpp  FlashController.cpp  FlashDriver.cpp  SPI.cpp
argon/libs/ftdi/: CMakeLists.txt  lookup_ftdi.cmake
argon/libs/mpsse/: CMakeLists.txt
argon/libs/mpsse/src/: ftdi_common.c  ftdi_infra.c  ftdi_spi.c
src/: CMakeLists.txt  N25QDriver.cpp  SPI.cpp  SPI.h  SPIMemory.cpp  main.cpp
src/ftdi/: CMakeLists.txt
src/mpsse/: CMakeLists.txt
src/mpsse/include/mpsse/: ftdi_infra.h
src/mpsse/src/: ftdi_common.c  ftdi_mid.c  ftdi_spi.c
